binary_class_models.ipynb

--- a/binary_class_models.ipynb
+++ b/binary_class_models.ipynb
@@ -29,10 +29,10 @@
     "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score\n",
     "import numpy.linalg as LA\n",
     "\n",
-    "# Load the data\n",
+    "#load the data\n",
     "df_csv = pd.read_csv(\"league_data.csv\", dtype={'win': str})\n",
     "\n",
-    "# Drop irrelevant/metadata columns\n",
+    "#drop irrelevant/metadata columns\n",
     "columns_to_drop = [\n",
     "    'game_id', 'game_version', 'participant_id', 'puuid', 'summoner_name', 'summoner_id',\n",
     "    'solo_tier', 'solo_rank', 'solo_lp', 'solo_wins', 'solo_losses',\n",
@@ -42,20 +42,20 @@
     "    'game_start_utc', 'queue_id', 'game_mode'\n",
     "]\n",
     "\n",
-    "# Filter for CLASSIC + ranked solo/duo games\n",
+    "#filter for CLASSIC + ranked solo/duo games\n",
     "df_filtered = df_csv[(df_csv['game_mode'] == 'CLASSIC') & (df_csv['queue_id'] == 420)].copy()\n",
     "\n",
-    "# Drop metadata columns\n",
+    "#drop metadata columns\n",
     "df_filtered_cleaned = df_filtered.drop(columns=[col for col in columns_to_drop if col in df_filtered.columns])\n",
     "\n",
-    "# Convert 'win' column to binary\n",
+    "#convert 'win' column to binary\n",
     "df_filtered_cleaned['win'] = (df_filtered_cleaned['win'] == 'TRUE').astype(int)\n",
     "\n",
-    "# Drop non-numeric/categorical columns (and item columns)\n",
+    "#drop non-numeric/categorical columns (and item columns)\n",
     "df_numeric_only = df_filtered_cleaned.drop(columns=df_filtered_cleaned.select_dtypes(include=['object', 'category']).columns)\n",
     "df_numeric_only = df_numeric_only.drop(columns=[col for col in df_numeric_only.columns if col.startswith(\"item\")])\n",
     "\n",
-    "# Final predictor/response matrices\n",
+    "#final predictor/response matrices\n",
     "X = df_numeric_only.drop(columns=['win']).fillna(df_numeric_only.mean())\n",
     "y = df_numeric_only['win']\n",
     "\n",
