--- a/PCLR_league_data.ipynb
+++ b/PCLR_league_data.ipynb
@@ -562,7 +562,7 @@
     "quantitative_columns = df_filtered_cleaned.select_dtypes(include=['number']).columns\n",
     "quantitative_data = df_filtered_cleaned[quantitative_columns]\n",
     "\n",
-    "# Outlier detection using IQR method\n",
+    "#outlier detection using IQR method\n",
     "outlier_info = []\n",
     "\n",
     "for col in quantitative_data.columns:\n",
@@ -574,7 +574,7 @@
     "    outlier_count = ((quantitative_data[col] < lower_fence) | (quantitative_data[col] > upper_fence)).sum()\n",
     "    outlier_info.append((col, outlier_count))\n",
     "\n",
-    "# Format and display\n",
+    "#format and display\n",
     "outlier_df = pd.DataFrame(outlier_info, columns=['Variable', 'Outlier Count'])\n",
     "outlier_df = outlier_df.sort_values(by='Outlier Count', ascending=False)\n",
     "\n",
@@ -654,14 +654,14 @@
     }
    ],
    "source": [
-    "# Remove all categorical variables from the data (object or category type)\n",
+    "#remove all categorical variables from the data (object or category type)\n",
     "df_numeric_only = df_filtered_cleaned.drop(columns=df_filtered_cleaned.select_dtypes(include=['object', 'category']).columns)\n",
     "\n",
-    "# Drop item columns explicitly (even though are may be numeric, they are IDs)\n",
+    "#drop item columns explicitly (even though are may be numeric, they are IDs)\n",
     "item_columns = [col for col in df_numeric_only.columns if col.startswith(\"item\")]\n",
     "df_numeric_only = df_numeric_only.drop(columns=item_columns)\n",
     "\n",
-    "# Recalculate outliers and skewness, high skewness is |skewness|>1\n",
+    "#recalculate outliers and skewness, high skewness is |skewness|>1\n",
     "outlier_info = []\n",
     "skewness_info = []\n",
     "\n",
@@ -678,7 +678,7 @@
     "    skew_val = skew(df_numeric_only[col].dropna())\n",
     "    skewness_info.append((col, skew_val))\n",
     "\n",
-    "# Format and display\n",
+    "#format and display\n",
     "outlier_df = pd.DataFrame(outlier_info, columns=['Variable', 'Outlier Count'])\n",
     "skewness_df = pd.DataFrame(skewness_info, columns=['Variable', 'Skewness'])\n",
     "eda_summary = pd.merge(outlier_df, skewness_df, on='Variable').sort_values(by='Outlier Count', ascending=False)\n",
