--- a/PCLR_league_data.ipynb
+++ b/PCLR_league_data.ipynb
@@ -682,7 +682,7 @@
    "source": [
     "## Remove Categorical Variables\n",
     "\n",
-    "We finalize the preprocessing by removing all non-numeric (categorical or object-type) columns. This ensures the resulting dataset is strictly quantitative — a prerequisite for applying PCA, logistic regression, and other algorithms that operate on continuous numerical inputs."
+    "We finalize the preprocessing by removing all non-numeric (categorical or object-type) columns. This ensures the resulting dataset is strictly quantitative, a prerequisite for applying PCA, logistic regression, and other algorithms that operate on continuous numerical inputs."
    ]
   },
   {
