--- a/PCLR_league_data.ipynb
+++ b/PCLR_league_data.ipynb
@@ -974,10 +974,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RPCLR (80% variance PCs) – Shuffle Test\n",
+      "RPCLR (80% variance PCs) Shuffle Test\n",
       "ROC AUC (Shuffled): 0.4958\n",
       "\n",
-      "RPCLR (80% variance PCs) – 5-Fold Cross-Validation\n",
+      "RPCLR (80% variance PCs) 5-Fold Cross-Validation\n",
       "AUCs: [0.9047 0.9142 0.9021 0.9022 0.9147]\n",
       "Mean AUC: 0.9076 | Std Dev: 0.0057\n"
      ]
