--- a/PCLR_league_data.ipynb
+++ b/PCLR_league_data.ipynb
@@ -996,7 +996,7 @@
     "logreg_rpclr_shuff.fit(X_train, y_train_shuff)\n",
     "y_proba_shuff = logreg_rpclr_shuff.predict_proba(X_test)[:, 1]\n",
     "\n",
-    "print(\"RPCLR (80% variance PCs) – Shuffle Test\")\n",
+    "print(\"RPCLR (80% variance PCs) Shuffle Test\")\n",
     "print(f\"ROC AUC (Shuffled): {roc_auc_score(y_test_shuff, y_proba_shuff):.4f}\\n\")\n",
     "\n",
     "# =========================\n",
@@ -1015,7 +1015,7 @@
     "    auc = roc_auc_score(y_test, y_proba)\n",
     "    auc_scores.append(auc)\n",
     "\n",
-    "print(\"RPCLR (80% variance PCs) – 5-Fold Cross-Validation\")\n",
+    "print(\"RPCLR (80% variance PCs) 5-Fold Cross-Validation\")\n",
     "print(\"AUCs:\", np.round(auc_scores, 4))\n",
     "print(f\"Mean AUC: {np.mean(auc_scores):.4f} | Std Dev: {np.std(auc_scores):.4f}\")"
    ]
