--- a/binary_class_models_comparison.ipynb
+++ b/binary_class_models_comparison.ipynb
@@ -477,7 +477,7 @@
     "- Nonlinear feature interactions\n",
     "- Feature importance and missing data\n",
     "\n",
-    "XGBoost builds trees sequentially, where each new tree tries to correct the errors of the previous one, minimizing a specified loss function—in this case, **log loss**.\n",
+    "XGBoost builds trees sequentially, where each new tree tries to correct the errors of the previous one, minimizing a specified loss function, in this case, **log loss**.\n",
     "\n",
     "We train the model on scaled data with default hyperparameters and evaluate using accuracy, F1 score, and ROC AUC."
    ]
@@ -528,7 +528,7 @@
    "source": [
     "## 7. LightGBM Classifier\n",
     "\n",
-    "This section fits a **LightGBM (Light Gradient Boosting Machine)** model—an efficient gradient boosting framework that uses histogram-based algorithms for faster training and lower memory usage.\n",
+    "This section fits a **LightGBM (Light Gradient Boosting Machine)** model, an efficient gradient boosting framework that uses histogram-based algorithms for faster training and lower memory usage.\n",
     "\n",
     "Compared to XGBoost, LightGBM is:\n",
     "- Faster on large datasets with many features\n",
@@ -961,7 +961,7 @@
     "Key details:\n",
     "- Full dataset provides a richer training signal, potentially capturing subtler relationships\n",
     "- XGBoost is configured to minimize **log loss**, which is appropriate for binary classification with probabilistic outputs\n",
-    "- Data is standardized before training, though XGBoost can handle unscaled input—scaling helps ensure fair comparison across models\n",
+    "- Data is standardized before training, though XGBoost can handle unscaled input, scaling helps ensure fair comparison across models\n",
     "\n",
     "We evaluate model performance using accuracy, F1 score, and ROC AUC."
    ]
