--- a/binary_class_neural_network_league_data.ipynb
+++ b/binary_class_neural_network_league_data.ipynb
@@ -455,7 +455,7 @@
    "source": [
     "# Hyperparameter Tuning with Grid Search\n",
     "\n",
-    "To improve model performance, we perform a grid search over key neural network hyperparameters — including the number of neurons, dropout rate, and learning rate — using cross-validation to identify the best configuration.\n"
+    "To improve model performance, we perform a grid search over key neural network hyperparameters, including the number of neurons, dropout rate, and learning rate, using cross-validation to identify the best configuration.\n"
    ]
   },
   {
